# MeidaKit

./: .gitignore  LICENSE  MediaKitSrc.podspec  README.md
base/: av_base.h  av_thread.cpp  av_thread.h  av_thread.hpp  event.cpp  event.h  location.cpp  location.h  message_handler.h  mk_base.h  mk_list.cpp  mk_list.h  mk_lock.cpp  mk_lock.h  mk_plock.cpp  mk_plock.h  mk_queue.h  mk_thread.cpp  mk_thread.h  priority_queue.cpp  priority_queue.h  priority_queue_spin.h  queue.cpp  queue.h  thread_manager.cpp  thread_manager.h  thread_message.cpp  thread_message.h
cmake/: CMakeLists.txt  mac.cmake  platform.cmake  sources.cmake
example/ios/: Podfile
manager/: mediakit_manager.cpp  mediakit_manager.h
sdk/: MKEglRender.h  MKEglRender.mm
sdk/MediaKit/: MKEglRender.h  (+1 more)
src/: CMakeLists.txt
video/: egl_env.h  gles_util.cpp  gles_util.h  mk_egl_base.cpp  mk_egl_base.h  mk_raw_video_frame.cpp  mk_raw_video_frame.h  mk_texture_base.cpp  mk_texture_base.h  mk_video_buffer.cpp  mk_video_buffer.h  mk_video_frame.cpp  mk_video_frame.h  mk_view.cpp  mk_view.h  render_manager_base.cpp  render_manager_base.h  render_manager_egl.cpp  render_manager_egl.h  video_egl_render_manager.cpp  video_egl_render_manager.h  video_frame.cpp  video_frame.h  video_render_base.cpp  video_render_base.h  video_render_egl.cpp  video_render_egl.h  video_render_egl_base.cpp  video_render_egl_base.h  video_render_manager.cpp  video_render_manager.h  video_render_manager_base.cpp  video_render_manager_base.h  video_render_program_egl.cpp  video_render_program_egl.h  video_texture.cpp  video_texture.h
(+54 files in other folders)
